--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -17,6 +17,12 @@ body {
 	line-height: 1.5;
 }
 
+img {
+	display: block;
+	max-width: 100%;
+	height: auto;
+}
+
 .btn {
 	color: inherit;
 	text-decoration: none;
